# sergen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sergen.c  sergen.h
source/: sergen.c
